<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="24dp"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/add_schedule_title"
            android:textSize="24sp"
            android:textStyle="bold" />

        <com.prolificinteractive.materialcalendarview.MaterialCalendarView
            android:id="@+id/mcv_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </com.prolificinteractive.materialcalendarview.MaterialCalendarView>

        <Switch
            android:id="@+id/switch_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:text="@string/add_schedule_switch_title" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:inputType="text"
            android:hint="@string/add_schedule_hint_title"
            android:drawableLeft="@drawable/ic_schedule_title"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="8"
            android:drawableLeft="@drawable/ic_schedule_description"
            android:hint="@string/add_schedule_hint_description" />

        <Button
            android:id="@+id/btn_add_schedule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/colorPrimary"
            android:text="@string/add_schedule_submit"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"/>

    </LinearLayout>

</ScrollView>
